# The-Game

./: README.md  demo.py  pyproject.toml  test.py
Events/: Event.py
core/: __init__.py  common.py  settings.yml
core/constants/: __init__.py  actions_constants.py  button_size_constants.py  character_constants.py  common_constants.py  enemy_constants.py  item_constants.py  key_bind_constants.py  language_constants.py  path_constants.py  server_constants.py  size_constants.py  weapon_names.py  widget_constants.py  windows_constants.py
core/enemies/: __init__.py  drop_rates.py  enemies_map.py  enemies_table.py  enemy.py  enemy_stats.py  texts.py
core/interface/: __init__.py  common.py
core/items/: __init__.py  base_item.py  consumable.py  tables.py  weapon.py
core/main_character/: character.py  characters_formulas.py  classes.py  start_parameters.py  texts.py
core/scenarios/: __init__.py  battle.py  common.py  constants.py  event.py  scenario.py  scenarios_maps.py  scenarios_table.py  texts.py
core/server_interactor/: interactor.py  verificator.py
core/stats_formulas/: characters_formulas.py
enemies/: drop_rates.py  enemies_map.py  enemy.py  enemy_stats.py  texts.py
interface/: __init__.py  character_menu.py  common.py  main_window.py  windows_parameters.py
items/: __init__.py
items/weapon/: __init__.py  (+9 more)
main_character/: __init__.py  character.py  character_dataclasses.py  classes.py  equipped_items_stats.py  start_parameters.py  texts.py
scenarios/: __init__.py
scripts/: run_sorts.bat
server/: __main__.py  common.py  constants.py  routes.py
(+157 files in other folders)
